// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
        id="age1"
        name="age"
        type="radio"
      />
      <figure
        className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
      />
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
      >
        0 - 30
      </span>
    </label>
  </div>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
        id="age2"
        name="age"
        type="radio"
      />
      <figure
        className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
      />
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
      >
        31 - 60
      </span>
    </label>
  </div>
  <div
    className="mb-2 ml-2"
  >
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
        id="age3"
        name="age"
        type="radio"
      />
      <figure
        className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
      />
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="RadioButtonLabel-ozr645-0 hlwLdP"
>
  <input
    checked={true}
    className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
    readOnly={true}
    type="radio"
  />
  <figure
    className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
  />
  <span
    className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="RadioButtonLabel-ozr645-0 hlwLdP"
>
  <input
    className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
    disabled={true}
    type="radio"
  />
  <figure
    className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
  />
  <span
    className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <div
      className="mb-2 ml-2"
    >
      <label
        className="RadioButtonLabel-ozr645-0 hlwLdP"
        htmlFor="age1"
      >
        <input
          aria-label="0 - 30"
          className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
          id="age1"
          name="age"
          type="radio"
        />
        <figure
          className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
        />
        <span
          className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
        >
          0 - 30
        </span>
      </label>
    </div>
    <div
      className="mb-2 ml-2"
    >
      <label
        className="RadioButtonLabel-ozr645-0 hlwLdP"
        htmlFor="age2"
      >
        <input
          aria-label="31 - 60"
          className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
          id="age2"
          name="age"
          type="radio"
        />
        <figure
          className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
        />
        <span
          className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
        >
          31 - 60
        </span>
      </label>
    </div>
    <div
      className="mb-2 ml-2"
    >
      <label
        className="RadioButtonLabel-ozr645-0 hlwLdP"
        htmlFor="age3"
      >
        <input
          aria-label="61 - 100"
          className="RadioButtonHiddenInput-sc-17huvt0-0 fabrWZ"
          id="age3"
          name="age"
          type="radio"
        />
        <figure
          className="RadioButtonStyledInput-sc-1xbgszd-0 fygHmY"
        />
        <span
          className="RadioButtonCaption-sc-1dv62p7-0 hpoFgp"
        >
          61 - 100
        </span>
      </label>
    </div>
  </div>
</div>
`;
